login and register templates

--- a/a_core/a_users/templates/a_users/login.html
+++ b/a_core/a_users/templates/a_users/login.html
@@ -1,6 +1,9 @@
-{% extends 'a_users/layout.html' %}
+{% extends 'a_app/layout.html' %}
 {% load static %}
 
+{% block script %}
+    <script src="{% static 'a_users/login.js' %}"></script>
+{% endblock%}
 
 {% block body %}
 
@@ -9,22 +12,17 @@
                 <h1 class="text-center fs-1">Email Sender Login</h1>
 
                 <div class="border rounded p-3 mb-5 mt-3">
-                    <form action="{% url 'login' %}" method="post">
+                    <form action="{% url 'login' %}" method="post" id="login-form">
                         {% csrf_token %}
                         <div class="mb-3">
-                            {{ form.email.label_tag }}
-                            {{ form.email }}
-                            {% for error in form.email.errors %}
-                                <div class="form-text text-danger">{{ error }}</div>
-                            {% endfor %}
+                            {{ form.username.label_tag }}
+                            {{ form.username }}
+                            <div id="username_message" class="form-text text-danger mt-1"></div>
                         </div>
 
                         <div class="mb-3">
                             {{ form.password.label_tag }}
                             {{ form.password }}
-                            {% for error in form.password.errors %}
-                                <div class="form-text text-danger">{{ error }}</div>
-                            {% endfor %}
                         </div>
 
                         <button type="submit" class="btn btn-primary w-100">Login</button>
