--- a/a_core/a_users/templates/a_users/layout.html
+++ b/a_core/a_users/templates/a_users/layout.html
@@ -7,15 +7,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'a_users/style.css' %}">
-    <script src="{% static 'a_users/otp.js' %}"></script>
-    <script src="{% static 'a_users/password.js' %}"></script>
     <title>Document</title>
+
+    {% block script %}
+    {% endblock %}
+    <link rel="stylesheet" href="{% static 'a_users/style.css' %}">
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">Email Sender</a>
+            {% if user.is_authenticated %}
+            <div class="d-flex">
+                <ul class="navbar-nav flex-row">
+                    <li class="nav-item me-2 ms-2">
+                        <a class="nav-link fw-bold" href="{% url 'register' %}">Profile</a>
+                    </li>
+                    <li class="nav-item ms-2">
+                        <a class="nav-link fw-bold" href="{% url 'logout' %}">logout</a>
+                    </li>
+                </ul>
+            </div>
+
+            {% else %}
+                <div class="d-flex">
+                <ul class="navbar-nav flex-row">
+                    <li class="nav-item me-2 ms-2">
+                        <a class="nav-link fw-bold" href="{% url 'register' %}">Register</a>
+                    </li>
+                    <li class="nav-item ms-2">
+                        <a class="nav-link fw-bold" href="{% url 'login' %}">Login</a>
+                    </li>
+                </ul>
+            </div>
+            {% endif %}
         </div>
     </nav>
     {% block body %}
