--- a/a_core/a_users/templates/a_users/register.html
+++ b/a_core/a_users/templates/a_users/register.html
@@ -1,6 +1,9 @@
-{% extends 'a_users/layout.html' %}
+{% extends 'a_app/layout.html' %}
 {% load static %}
-
+{%  block script %}
+    <script src="{% static 'a_users/otp.js' %}"></script>
+    <script src="{% static 'a_users/password.js' %}"></script>
+{%  endblock %}
 
 {% block body %}
 
@@ -16,9 +19,6 @@
                         <div class="mb-3">
                             {{ form.username.label_tag }}
                             {{ form.username }}
-                            {% for error in form.username.errors %}
-                                <!-- <div class="form-text text-danger"></div> -->
-                            {% endfor %}
                             <div id="username_message" class="form-text text-danger mt-1"></div>
                         </div>
 
@@ -28,9 +28,6 @@
                                 <div class="mb-3">
                                     {{ form.email.label_tag }}
                                     {{ form.email }}
-                                    {% for error in form.email.errors %}
-                                        <div class="form-text text-danger">{{ error }}</div>
-                                    {% endfor %}
                                     <button type="button" id="verify_email" class="btn btn-outline-success mt-2">Verify Email</button>
                                     <div id="email_message" class="form-text text-success mt-1"></div>
                                 </div>
@@ -41,9 +38,6 @@
                                 <div class="mb-3">
                                     {{ form.otp.label_tag }}
                                     {{ form.otp }}
-                                    {% for error in form.otp.errors %}
-                                        <div class="form-text text-danger">{{ error }}</div>
-                                    {% endfor %}
                                     <button type="button" id="verify_otp" class="btn btn-outline-primary mt-2 disabled">Submit OTP</button>
                                     <div id="otp_message" class="form-text text-success mt-1"></div>
                                 </div>
@@ -54,20 +48,12 @@
                         <div class="mb-3">
                             {{ form.password.label_tag }}
                             {{ form.password }}
-
-                            {% for error in form.password.errors %}
-                                <!-- <div class="form-text text-danger"></div> -->
-                            {% endfor %}
-
                             <div id="password_message" class="form-text text-danger mt-1"></div>
                         </div>
 
                         <div class="mb-3">
                             {{ form.confirm_password.label_tag }}
                             {{ form.confirm_password }}
-                            {% for error in form.confirm_password.errors %}
-                                <div class="form-text text-danger">{{ error }}</div>
-                            {% endfor %}
                         </div>
                         <button type="submit" class="btn btn-primary w-100" id="registering_button">Register</button>
                         <p class="text-center fw-medium">
