added style tag

--- a/a_core/a_users/templates/a_users/login.html
+++ b/a_core/a_users/templates/a_users/login.html
@@ -5,6 +5,10 @@
     <script src="{% static 'a_users/login.js' %}"></script>
 {% endblock%}
 
+{% block style %}
+    <link rel="stylesheet" href="{% static 'a_users/style.css' %}">
+{% endblock %}
+
 {% block body %}
 
     <div class="d-flex justify-content-center align-items-center vh-100">
