--- a/a_core/a_app/templates/a_app/layout.html
+++ b/a_core/a_app/templates/a_app/layout.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <title>Document</title>
     {% block script %}
     {% endblock %}
-    <link rel="stylesheet" href="{% static 'a_users/style.css' %}">
+
+    {% block style %}
+    {% endblock %}
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
@@ -20,7 +23,7 @@
             <div class="d-flex"> 
                 <ul class="navbar-nav flex-row"> 
                     <li class="nav-item me-2 ms-2"> 
-                        <a class="nav-link fw-bold" href="{% url 'register' %}">Profile</a>
+                        <a class="nav-link fw-bold" href="{% url 'profile' %}">Profile</a>
                     </li>
                     <li class="nav-item ms-2">
                         <a class="nav-link fw-bold" href="{% url 'logout' %}">logout</a>
