--- a/a_core/a_users/templates/a_users/profile.html
+++ b/a_core/a_users/templates/a_users/profile.html
@@ -92,7 +92,7 @@
             <div class="bg-light p-4 border rounded shadow-sm w-100" style="max-width: 900px;" id="security-div">
                 <h4 class="fw-semibold">Security</h4>
 
-                <!-- Username row -->
+                <!-- Password row -->
                 <div class="border-top py-3 d-flex justify-content-between align-items-center">
                     <div class="fw-semibold">Password</div>
                     <div>
@@ -102,7 +102,7 @@
                 <div class="collapse mt-3" id="collapseForm2">
                     <form>
                         <div class="mb-3">
-                            <label for="old-password"></label><input type="password" class="form-control" id="old-password" name="old password" placeholder="old password">
+                            <label for="old-password"></label><input type="password" class="form-control" id="old-password" name="old password" placeholder="old password" autocomplete="off" value="">
                             <label for="new-password"></label><input type="password" class="form-control" id="new-password" name="new password" placeholder="new password">
                             <label for="confirm-new-password"></label><input type="password" class="form-control" id="confirm-new-password" name="confirm new password" placeholder="confirm new password">
                         </div>
