--- a/a_core/a_users/templates/a_users/profile.html
+++ b/a_core/a_users/templates/a_users/profile.html
@@ -2,15 +2,13 @@
 {% load static %}
 
 {% block script %}
-    <script src="{% static 'a_users/general-infos.js' %}"></script>
-    <script src="{% static 'a_users/profile.js' %}"></script>
+
 {% endblock %}
 
 
 {% block style %}
     <link rel="stylesheet" href="{% static 'a_users/profile.css' %}">
 {% endblock %}
-
 
 {% block body %}
     <div class="d-flex" style="height: calc(100vh - 56px);">
@@ -25,8 +23,8 @@
             </div>
 
             <div class="nav-links">
-                <a href="#" id="general-information-btn">Personal information</a>
-                <a href="#" id="security-btn">Security</a>
+                <a href="{% url 'personal_info' %}" id="general-information-btn">Personal information</a>
+                <a href="{% url 'security_info' %}" id="security-btn">Security</a>
                 <a href="#" id="button-3">Subscriptions</a>
                 <a href="#" id="button-4">Advanced settings</a>
             </div>
@@ -35,90 +33,6 @@
                 <button class="btn btn-dark w-100">Logout</button>
             </div>
         </div>
-        <div class="main-content p-4" id="general-infos">
-
-            <div class="bg-light p-4 border rounded shadow-sm w-100" style="max-width: 900px;" id="general-information">
-                <h4 class="fw-semibold">General Information</h4>
-                <p class="text-muted small">
-                    Some of these information can be accessible by other users
-                </p>
-
-                <!-- Profile picture row -->
-                <div class="border-top py-3 d-flex justify-content-between align-items-center">
-                    <div>
-                        <div class="fw-semibold">Profile Picture</div>
-                    </div>
-                    <div class="text-end">
-                        {% if user.profile.profile_picture %}
-                            <img src="{{ user.profile.profile_picture.url }}" alt="Profile picture"
-                                 class="rounded-circle border" width="60" height="60">
-                        {% else %}
-                            <img src="{% static 'a_users/images/default.jpeg' %}" alt="Default profile picture"
-                                 class="rounded-circle border" width="60" height="60">
-                        {% endif %}
-                    </div>
-                </div>
-
-                <!-- Username row -->
-                <div class="border-top py-3 d-flex justify-content-between align-items-center">
-                    <div class="fw-semibold">Username</div>
-                    <div>
-                        {{ user.username }} <a href="#" data-bs-toggle="collapse" data-bs-target="#collapseForm1" aria-expanded="false" aria-controls="collapseForm" id="toggleArrow"><i class="bi bi-chevron-right ms-2"></i></a>
-                    </div>
-                </div>
-                <div class="collapse mt-3" id="collapseForm1">
-                    <form action="{% url 'profile' %}" method="post" id="username-form">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            {{ form.username.label_tag }}
-                            {{ form.username }}
-                        </div>
-                        <div class="d-grid gap-2 col-4 mx-auto">
-                            <button type="submit" class="btn btn-primary mb-3 btn-sm">Save</button>
-                        </div>
-                    </form>
-                </div>
-                <!-- Email row -->
-                <div class="border-top border-bottom py-3 d-flex justify-content-between align-items-center">
-                    <div class="fw-semibold">Email Address</div>
-                    <div class="px-3">
-                        {{ user.email }}
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Security  -->
-        <div class="main-content p-4 d-none" id="security-div" >
-
-            <div class="bg-light p-4 border rounded shadow-sm w-100" style="max-width: 900px;" id="security-div">
-                <h4 class="fw-semibold">Security</h4>
-
-                <!-- Password row -->
-                <div class="border-top py-3 d-flex justify-content-between align-items-center">
-                    <div class="fw-semibold">Password</div>
-                    <div>
-                        last updated {{ last_time }}<a href="#" data-bs-toggle="collapse" data-bs-target="#collapseForm2" aria-expanded="false" aria-controls="collapseForm" id="toggleArrow"><i class="bi bi-chevron-right ms-2"></i></a>
-                    </div>
-                </div>
-                <div class="collapse mt-3" id="collapseForm2">
-                    <form>
-                        <div class="mb-3">
-                            <label for="old-password"></label><input type="password" class="form-control" id="old-password" name="old password" placeholder="old password" autocomplete="off" value="">
-                            <label for="new-password"></label><input type="password" class="form-control" id="new-password" name="new password" placeholder="new password">
-                            <label for="confirm-new-password"></label><input type="password" class="form-control" id="confirm-new-password" name="confirm new password" placeholder="confirm new password">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Save</button>
-                    </form>
-                </div>
-                <!-- Email row -->
-                <div class="border-top border-bottom py-3 d-flex justify-content-between align-items-center">
-                    <div class="fw-semibold">Email Address</div>
-                    <div class="px-3">
-                        {{ user.email }}
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% block content %}{% endblock %}
     </div>
 {% endblock %}
