add html content

--- a/a_core/a_users/templates/a_users/profile.html
+++ b/a_core/a_users/templates/a_users/profile.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="bottom-button mt-auto pt-4">
-                <button class="btn btn-dark w-100">Logout</button>
+                <a href="{% url 'logout' %}" class="btn btn-dark w-100">Logout</a>
             </div>
         </div>
         {% block content %}{% endblock %}
