--- a/a_core/a_users/templates/a_users/security.html
+++ b/a_core/a_users/templates/a_users/security.html
@@ -6,9 +6,14 @@
 {% endblock %}
 
 {% block content %}
+
     <div class="main-content p-4" id="security-div" >
 
+
         <div class="bg-light p-4 border rounded shadow-sm w-100" style="max-width: 900px;" id="security-div">
+            <div class="alert alert-success d-none" role="alert" id="alert-success">
+                Password changed successfully!
+            </div>
             <h4 class="fw-semibold">Security</h4>
             <!-- Password row -->
             <div class="border-top py-3 d-flex justify-content-between align-items-center">
@@ -17,7 +22,7 @@
                     last updated {{ last_time }}<a href="#" data-bs-toggle="collapse" data-bs-target="#collapseForm2" aria-expanded="false" aria-controls="collapseForm" id="toggleArrow"><i class="bi bi-chevron-right ms-2"></i></a>
                 </div>
             </div>
-            <div class="collapse mt-3" id="collapseForm2">
+            <div class="collapse mb-2 mt-3" id="collapseForm2">
                 <form action="{% url 'security_info' %}" method="post" id="password-form">
                     {% csrf_token %}
                     <div class="mb-4">
@@ -25,24 +30,25 @@
                             {{ password_form.old_password.label }}:
                         </label>
                         {{ password_form.old_password }}
-                        <div id="old_password_message" class="form-text text-danger mt-1"></div>
+                        <div id="old_password_message" class="text-start form-text text-danger mt-1"></div>
                     </div>
                     <div class="mb-4">
                         <label for="{{ password_form.new_password.id_for_label }}" class="mb-2 d-block">
                             {{ password_form.new_password.label_tag }}
                         </label>
                         {{ password_form.new_password }}
-                        <div id="new_password_message" class="form-text text-danger mt-1"></div>
+                        <div id="new_password_message" class="text-start form-text text-danger mt-1"></div>
                     </div>
                     <div class="mb-4">
                         <label for="{{ password_form.confirm_password.id_for_label }}" class="mb-2 d-block">
                             {{ password_form.confirm_password.label_tag }}
                         </label>
                         {{ password_form.confirm_password }}
-                        <div id="confirm_password_message" class="form-text text-danger mt-1"></div>
+                        <div id="confirm_password_message" class="text-start form-text text-danger mt-1"></div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-primary" id="update_btn">Update</button>
                 </form>
+
             </div>
             <!-- Email row -->
             <div class="border-top border-bottom py-3 d-flex justify-content-between align-items-center">
