--- a/a_core/a_users/static/a_users/profile.css
+++ b/a_core/a_users/static/a_users/profile.css
@@ -57,3 +57,18 @@
     font-weight: bold;
     text-decoration: underline;
 }
+
+.btn-icon {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  font-size: 14px;
+  transition: opacity 0.3s ease;
+}
+.btn-icon:hover {
+  opacity: 0.8;
+}
