--- a/a_core/a_app/templates/a_app/layout.html
+++ b/a_core/a_app/templates/a_app/layout.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <title>Document</title>
+    <title>{% block title %}{% endblock %}</title>
     {% block script %}
     {% endblock %}
 
@@ -16,34 +16,43 @@
     {% endblock %}
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">Email Sender</a>
-            {% if user.is_authenticated %}
-            <div class="d-flex"> 
-                <ul class="navbar-nav flex-row"> 
-                    <li class="nav-item me-2 ms-2"> 
-                        <a class="nav-link fw-bold" href="{% url 'profile' %}">Profile</a>
-                    </li>
-                    <li class="nav-item ms-2">
-                        <a class="nav-link fw-bold" href="{% url 'logout' %}">logout</a>
-                    </li>
-                </ul>
-            </div>
-                
-            {% else %}
-                <div class="d-flex"> 
-                <ul class="navbar-nav flex-row"> 
-                    <li class="nav-item me-2 ms-2"> 
-                        <a class="nav-link fw-bold" href="{% url 'register' %}">Register</a>
-                    </li>
-                    <li class="nav-item ms-2">
-                        <a class="nav-link fw-bold" href="{% url 'login' %}">Login</a>
-                    </li>
-                </ul>
-            </div>
-            {% endif %}
+    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}">KONVO</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="#">Subscriptions</a>
+            </li>
+          {% endif %}
+          </ul>
         </div>
+          <ul class="navbar-nav ms-auto">
+              {% if not user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link active" href="{% url 'register' %}">Register</a>
+                </li>
+                <li class="nav-item text-end">
+                  <a class="nav-link active" href="{% url 'login' %}">Login</a>
+                </li>
+              {% else %}
+                <li class="nav-item">
+                  <a class="nav-link active" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li class="nav-item text-end">
+                  <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
+                </li>
+              {% endif %}
+          </ul>
+      </div>
     </nav>
     {% block body %}
     {% endblock %}
